apps/fastapi/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aws-k8s-app
  namespace: aws-k8s-app
  labels:
    app: aws-k8s-app
spec:
  type: ClusterIP
  selector:
    app: aws-k8s-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
